dashboard overflow scroll issue fixed

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -72,6 +72,14 @@ input[type="number"] {
   -moz-appearance: textfield;
 }
 
+/* Reset Scrollbar */
+::-webkit-scrollbar {
+  @apply w-[0.3rem] bg-[#fff] rounded-[0.6rem];
+}
+::-webkit-scrollbar-thumb {
+  @apply bg-[#6d6c6c] rounded-[0.6rem] hover:bg-[#313131] duration-500;
+}
+
 #nprogress .bar {
   @apply !bg-primary;
 }
